[package]
authors      = [ "StrayLittlePunk <zerco@foxmail.com>" ]
categories   = [ "api-bindings" ]
description  = "crate provides programmatic access to Tencent Cloud api."
edition      = "2021"
homepage     = "https://docs.rs/tencent3"
keywords     = [ "sdk", "tencent", "translate" ]
license      = "Apache-2.0"
license-file = "LICENSE"
name         = "tencent3"
readme       = "README.md"
repository   = "https://github.com/StrayLittlePunk/tencent3"
version      = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
chrono = "0.4.23"
derive_builder = "0.12.0"
hmac = "0.12.1"
hyper = "0.14.24"
hyper-rustls = { version = "0.23.2", features = [
    "http1",
    "http2",
    "logging",
    "rustls-native-certs",
    "tls12",
    "tokio-runtime",
], default-features = false }
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.93"
sha2 = "0.10.6"
tokio = { version = "1.25.0", features = [ "full" ] }
